# meetingminder

./: .gitignore  LICENSE  README.md
consumers/desktop/go/: config.json  go.mod  go.sum  main.go  meetingminder.config.json
consumers/desktop/go/notifiers/: notifiers.go  systraynotifier.go  usbnotifier.go  voicenotifier.go
consumers/desktop/go/types/: types.go
consumers/desktop/py/: app.py  pyproject.toml  secrets.py
consumers/desktop/py/circuitpython_device/: code.py
consumers/desktop/usb_notifiers/arduino/meetingminder_usb/: meetingminder_usb.ino
consumers/desktop/usb_notifiers/circuitpython/: code.py
consumers/esp32/: esp32.ino  secrets.h
consumers/esp8266/: esp8266.ino
consumers/micropython/: README.md  leds.py  leds_neopixel.py  main.py  main1.py  main2.py  meetingminder.py  secrets.py  test_connectivity.py
consumers/micropython_esp/: main1.py  main2.py  meetingminder.py  secrets.py
consumers/raspberrypi/: README.md  config.json  go.mod  main.go
publisher/: README.md
publisher/google-app-script/: Code.gs  secrets.gs
